--- a/Athon/appsettings.json
+++ b/Athon/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+    "AthonDB": "Server=192.168.160.103; Database=DBAthon; Trusted_Connection=True;"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
